1999-08-31  Marcus Brinkmann <Marcus.Brinkmann@ruhr-uni-bochum.de>

	* crash.c (trivfs_modify_stat): Remove redundant fstype setting.
	* password.c (trivfs_modify_stat): Likewise.

	* bogus-fifo.c (main): Deallocate bootstrap port after using it.
	* fifo.c (main): Likewise.
	* firmlink.c (main): Likewise.
	* ifsock.c (main): Likewise.
	* magic.c (main): Likewise.
	* null.c (main): Likewise.
	* symlink.c (main): Likewise.

1999-07-11  Roland McGrath  <roland@baalperazim.frob.com>

	* firmlink.c: Add #include <sys/mman.h>.

1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* firmlink.c (trivfs_S_io_read): Use mmap instead of vm_allocate.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* crash.c: Add #include <sys/mman.h> for munmap decl.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* crash.c (stop_pgrp): Use munmap instead of vm_deallocate.

1999-06-01  Roland McGrath  <roland@baalperazim.frob.com>

	* crash.c (options): Add --dump-core as alias for --core-file.

	* crash.c: Support three modes of operation, selected by command line
	switches:
		-s/--suspend	suspend crashing process (old behavior)
		-k/--kill	kill crashing process, no core dump
		-c/--core-file	dump core file
	(enum crash_action): New type.
	(crash_how): New variable.
	(options, crash_argp, trivfs_runtime_argp): New variables.
	(parse_opt, trivfs_append_args): New functions.
	(main): Call argp_parse.

1999-05-19  Roland McGrath  <roland@baalperazim.frob.com>

	* null.c (trivfs_S_io_read): Fix return value.
	Reported by Steinar Hamre <steinarh@fim.ntnu.no>.

1999-05-01  Roland McGrath  <roland@baalperazim.frob.com>

	* fwd.c (main): Add missing newline in usage msg.
	From Marcus Brinkmann.

1999-02-20  Mark Kettenis  <kettenis@gnu.org>

	* password.c: New file.
	* Makefile (targets): Add password.
	(SRCS): Add password.c.
	(OBJS): Add passwordServer.o.
	(password-LDLIBS): New variable.
	Use dependencies identical to those for crash.
