@@ -1,3 +1,12 @@
+1999-09-07  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* null.c (trivfs_S_io_map): Renamed to ...
+	(trivfs_S_io_map_segment): ... here, with new parameter `index'.
+	* new-fifo.c (trivfs_S_io_map): Renamed to ...
+	(trivfs_S_io_map_segment): ... here, with new parameter `index'.
+	* fifo.c (trivfs_S_io_map): Renamed to ...
+	(trivfs_S_io_map_segment): ... here, with new parameter `index'.
+
 1999-08-31  Marcus Brinkmann <Marcus.Brinkmann@ruhr-uni-bochum.de>
 
 	* crash.c (trivfs_modify_stat): Remove redundant fstype setting.
